objects/copado__Project__c.object
<CustomObject>
    <description>Overall object for capturing the project details.</description>
    <fields>
        <fullName>Maximum_User_Stories_Behind__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Maximum User Stories Behind</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Require_Compliance_Scan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will require developers and admins to run a compliance scan and have a status of &quot;Completed - Approved&quot; before being able to deploy their user story forward.  Note - Copado Compliance Hub is a separate product.  Reach out to your customer success manager if you would like to add this product on.</inlineHelpText>
        <label>Require Compliance Scan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Pull_Before_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will require developers to back deploy all available user stories before they are able to deploy their story forward.</inlineHelpText>
        <label>Require Pull Before Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Pull_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to require developers and admins to have an approved pull request on their user story before being able to deploy it forward.</inlineHelpText>
        <label>Require Pull Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Successful_Validation_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will require developers and admins to perform a validation deployment before being able to deploy their user story forward.</inlineHelpText>
        <label>Require Successful Validation Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Static_Code_Analysis_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter a number above 0.  This will require user stories&apos; static code analysis scores to be below this number in order to be deployed forward.</inlineHelpText>
        <label>Required Static Code Analysis Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Simplify_User_Story_Layout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to simplify the user story layout.  Uncheck to show out of the box user story layout</description>
        <label>Simplify User Story Layout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__API_Name__c</fullName>
        <description>Use this field as an identifier for the Project record when referencing it in an action.</description>
        <inlineHelpText>Use this field as an identifier for the Project record when referencing it in an action.</inlineHelpText>
        <label>API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If working with Copado Change Management, the Project must be linked to a Pipeline.</inlineHelpText>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_Tabs_from_Promotion_Page__c</fullName>
        <label>Exclude Tabs from Promotion Page</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static Code Analysis Summary</fullName>
                </value>
                <value>
                    <fullName>Selenium Test</fullName>
                </value>
                <value>
                    <fullName>Promotion User Story Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Index_Metadata__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When this field is checked, Copado will index the metadata selected against the user stories into the User Story Metadata custom object. Indexed metadata can be used for reporting and compliance, and it&apos;s also used by Copado overlap awareness feature.</inlineHelpText>
        <label>Index Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadoconnect__Connect_log__c</fullName>
        <label>Connect log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoconnect__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copadoconnect__Last_Synced_Date__c</fullName>
        <label>Last Synced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadoconnect__Organization__c</fullName>
        <label>Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Deployment_Flow__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>